# gv_hra

./: .gitignore  CMakeLists.txt  GameMain.cs  Program.cs  TBoGV.sln  app.manifest  main.cpp  monogame2d.sln
Content/: Content.mgcb
Core/: AssetManagers.cs  Camera.cs  Enemy.cs  EnemyRanged.cs  EnemyZdena.cs  Entity.cs  Game.cs  Hearth.cs  InGameMenu.cs  ObjectCollision.cs  Player.cs  Projectile.cs  ProjectileRoot.cs  RangedEnemy.cs  Room.cs  RoomEmpty.cs  Screen.cs  ScreenGame.cs  TextureManager.cs  TileTypes.cs  Tiles.cs  UI.cs
Core/Entity/: Entity.cs  ObjectCollision.cs  Player.cs
Core/Entity/Enemy/: Enemy.cs  EnemyVitek.cs  EnemyZdena.cs
Core/Entity/Item/: Coin.cs  Item.cs  ItemBig.cs  ItemContainer.cs  ItemContainerable.cs  ItemDoping.cs
Core/Entity/Projectile/: ProjectilePee.cs
Core/Interface/: IDealDmg.cs  IDraw.cs  IInteractable.cs  IRecieveDmg.cs  ITexture.cs  iTexture.cs
Core/Map/: Level.cs  Room.cs  RoomEmpty.cs  RoomStart.cs  Tiles.cs
Core/UI/: Heart.cs  InGameMenu.cs  InGameMenuInventory.cs  Screen.cs  ScreenGame.cs  UI.cs
cpp shenanigans/useless code cemetery/inc/grafika/: grafika.h
cpp_cemetery/: CMakeLists.txt
cpp_cemetery/inc/grafika/: grafika.cpp
inc/grafika/: grafika.cpp  grafika.h
inc/grafika/example/: Makefile  main.cpp
monogame2d/: Game1.cs  Program.cs  app.manifest
monogame2d/Content/: Content.mgcb
